Bug 233085 - Dialog Error in modifying existing split transaction
Summary: Dialog Error in modifying existing split transaction
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-02 17:38 UTC by Toan
Modified: 2010-04-02 18:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toan 2010-04-02 17:38:03 UTC
Version:           3.97.1 latest svn (using KDE 4.4.1)
Compiler:          gcc 4.4.1 
OS:                Linux
Installed from:    Compiled From Sources


When I edit an existing split transaction, the sum of the splits changes, there will be a dialog saying:

The total amount of this transaction is ... while the sum of the splits is .... The remaining ... are unassigned.

How do you want to proceed?

....

There are 4 buttons on this dialog. (2 "OK" and 2 "Cancel"). There should only 2 buttons (1 "OK" and 1 "Cancel")
Comment 1 Alvaro Soliverez 2010-04-02 18:15:23 UTC
SVN commit 1110260 by asoliverez:

Fixed the splits correction dialog and changed the splits dialog to use the standard KDE buttons

BUG:233085
BUG:233034

 M  +8 -72     ksplitcorrectiondlg.ui  
 M  +28 -22    ksplittransactiondlg.cpp  
 M  +0 -76     ksplittransactiondlgdecl.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1110260