Fixed the splits correction dialog and changed the splits dialog to use the standard KDE buttons

BUG:233085
BUG:233034

svn path=/trunk/playground/office/kmymoney/; revision=1110260